--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Signum"
         tools:targetApi="31">
         <activity
+            android:name=".activitys.profile.ProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".activitys.dictionary.DictionaryActivity"
             android:exported="false"
             android:screenOrientation="portrait"
