--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,20 @@
 [versions]
 agp = "8.6.1"
 compiler = "4.15.1"
-firebaseBom = "33.3.0"
-firebaseStorage = "21.0.0"
+firebaseBom = "33.5.1"
+firebaseStorage = "21.0.1"
 glide = "4.15.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
 material = "1.12.0"
-activity = "1.9.2"
-constraintlayout = "2.1.4"
-firebaseAuth = "23.0.0"
-firebaseFirestore = "25.1.0"
+activity = "1.9.3"
+constraintlayout = "2.2.0"
+firebaseAuth = "23.1.0"
+firebaseFirestore = "25.1.1"
 picasso = "2.71828"
+picassoTransformations = "2.4.0"
 playServicesAuth = "21.2.0"
 
 [libraries]
@@ -32,6 +33,7 @@ constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayo
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth" }
 firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
 picasso = { module = "com.squareup.picasso:picasso", version.ref = "picasso" }
+picasso-transformations = { module = "jp.wasabeef:picasso-transformations", version.ref = "picassoTransformations" }
 play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuth" }
 
 [plugins]
