Agrego pantalla de personal details

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,14 @@
         android:theme="@style/Theme.Signum"
         tools:targetApi="31">
         <activity
-            android:name=".activitys.profile.ProfileActivity"
-            android:screenOrientation="portrait"
+            android:name=".activitys.profile.PersonalDetailsActivity"
             android:exported="false"
+            android:screenOrientation="portrait"
+            tools:ignore="DiscouragedApi,LockedOrientationActivity" />
+        <activity
+            android:name=".activitys.profile.ProfileActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
             tools:ignore="DiscouragedApi,LockedOrientationActivity" />
         <activity
             android:name=".activitys.dictionary.DictionaryActivity"
